@@ -155,7 +155,7 @@ function extractIndexContent (page, $) {
 function createIndexFile (index) {
   return {
     mediaType: 'application/javascript',
-    contents: Buffer.from(`lunrSiteSearch.init(lunr, ${JSON.stringify(index)})`),
+    contents: Buffer.from(`initSearch(lunr, ${JSON.stringify(index)})`),
     src: { stem: 'search-index' },
     out: { path: 'search-index.js' },
     pub: { url: '/search-index.js', rootPath: '' },
