@@ -1,3 +1,0 @@
-<script src="{{{uiRootPath}}}/js/vendor/lunr.js"></script>
-<script src="{{{uiRootPath}}}/js/search-ui.js" id="search-script" data-site-root-path="{{{siteRootPath}}}" data-stylesheet="{{{uiRootPath}}}/css/search.css"></script>
-<script async src="{{{siteRootPath}}}/search-index.js"></script>
