@@ -26,22 +26,20 @@ describe('generateSite()', () => {
     const searchIndexPath = ospath.join(outputDir, 'search-index.js')
     expect(searchIndexPath).to.be.a.file()
     global.lunr = {}
-    global.lunrSiteSearch = {
-      init (lunr, index) {
-        expect(Object.keys(index.store).length).to.equal(2)
-        expect(index.store['/antora-lunr/index.html']).to.include({
-          title: 'Antora x Lunr',
-          url: '/antora-lunr/index.html',
-        })
-        expect(index.store['/antora-lunr/named-module/the-page.html']).to.include({
-          title: 'The Page',
-          url: '/antora-lunr/named-module/the-page.html',
-        })
-      },
+    global.initSearch = function (lunr, index) {
+      expect(Object.keys(index.store).length).to.equal(2)
+      expect(index.store['/antora-lunr/index.html']).to.include({
+        title: 'Antora x Lunr',
+        url: '/antora-lunr/index.html',
+      })
+      expect(index.store['/antora-lunr/named-module/the-page.html']).to.include({
+        title: 'The Page',
+        url: '/antora-lunr/named-module/the-page.html',
+      })
     }
     require(searchIndexPath)
     delete global.lunr
-    delete global.lunrSiteSearch
+    delete global.initSearch
   })
 
   it('should insert script element with predefined data attributes', async () => {
@@ -49,13 +47,13 @@ describe('generateSite()', () => {
     const startPageContents = await fsp.readFile(ospath.join(outputDir, 'antora-lunr/index.html'))
     let $ = cheerio.load(startPageContents)
     expect($('#search-input')).to.have.lengthOf(1)
-    let searchScript = $('#search-script')
+    let searchScript = $('#search-ui-script')
     expect(searchScript).to.have.lengthOf(1)
     expect(searchScript.attr('data-site-root-path')).to.equal('..')
     expect(searchScript.attr('data-stylesheet')).to.equal('../_/css/search.css')
     const thePageContents = await fsp.readFile(ospath.join(outputDir, 'antora-lunr/named-module/the-page.html'))
     $ = cheerio.load(thePageContents)
-    searchScript = $('#search-script')
+    searchScript = $('#search-ui-script')
     expect(searchScript.attr('data-site-root-path')).to.equal('../..')
     expect(searchScript.attr('data-stylesheet')).to.equal('../../_/css/search.css')
   })
@@ -64,6 +62,29 @@ describe('generateSite()', () => {
     await generateSite(['--playbook', playbookFile, '--to-dir', outputDir, '--cache-dir', cacheDir, '--quiet'], {})
     const expected = ospath.join(outputDir, '_/js/vendor/lunr.js')
     expect(expected).to.be.a.file().and.equal(require.resolve('lunr/lunr.min.js'))
+    const thePageContents = await fsp.readFile(ospath.join(outputDir, 'antora-lunr/named-module/the-page.html'))
+    const $ = cheerio.load(thePageContents)
+    expect($('script[src="../../_/js/vendor/lunr.js"]').get()).to.have.lengthOf(1)
+  })
+
+  it('should output language support files to js vendor directory of UI output folder', async () => {
+    playbookFile = ospath.join(FIXTURES_DIR, 'docs-site', 'antora-playbook-with-languages.yml')
+    const env = {}
+    await generateSite(['--playbook', playbookFile, '--to-dir', outputDir, '--cache-dir', cacheDir, '--quiet'], env)
+    expect(env).to.not.have.property('SITE_SEARCH_LANGUAGES')
+    const expectedContents = await Promise.all([
+      fsp.readFile(require.resolve('lunr-languages/lunr.stemmer.support.js')),
+      fsp.readFile(require.resolve('lunr-languages/lunr.fr.js')),
+      fsp.readFile(require.resolve('lunr-languages/lunr.de.js')),
+    ]).then(Buffer.concat)
+    expect(ospath.join(outputDir, '_/js/vendor/lunr-languages.js'))
+      .to.be.a.file()
+      .and.have.content(expectedContents.toString())
+    const thePageContents = await fsp.readFile(ospath.join(outputDir, 'antora-lunr/named-module/the-page.html'))
+    const $ = cheerio.load(thePageContents)
+    expect($('script[src="../../_/js/vendor/lunr-languages.js"]').get()).to.have.lengthOf(1)
+    expect($('script[src="../../_/js/vendor/lunr.stemmer.support.js"]').get()).to.have.lengthOf(0)
+    expect($('script[src="../../_/js/vendor/lunr.fr.js"]').get()).to.have.lengthOf(0)
   })
 
   it('should not generate search index or add scripts to pages if extension is not enabled', async () => {
@@ -75,6 +96,6 @@ describe('generateSite()', () => {
     const startPageContents = await fsp.readFile(ospath.join(outputDir, 'antora-lunr/index.html'))
     const $ = cheerio.load(startPageContents)
     expect($('#search-input')).to.have.lengthOf(0)
-    expect($('#search-script')).to.have.lengthOf(0)
+    expect($('#search-ui-script')).to.have.lengthOf(0)
   })
 })
